@@ -2,6 +2,7 @@ eZ Online Editor MCE extension Changelog
 
 5.0Beta3
 * Fixed bug #012989: Add a loading icon while system is searching (Insert image popup)
+* added image preview in search and browse view
 
 5.0Beta2
 * Added debug as text comment in ajax view's (embed_view, expand, load and search)
